# maku-everything

./: .eslintrc.json  .gitignore  README.md  index.html  jest-setup.tsx  jest.config.ts  lint-staged.config.js  package-lock.json  package.json  postcss.config.cjs  tsconfig.json  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md  converter.ts
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/category/application/: service.rs  tauri-command.rs
src-tauri/src/category/application/command/: create-category.rs  export-category.rs  import-category.rs  mod.rs  update-category.rs
src-tauri/src/category/application/dto/: error.rs  mod.rs  request.rs  response-category.rs
src-tauri/src/category/application/query/: get-all-category.rs  get-by-id-category.rs
src-tauri/src/category/domain/: error.rs  id.rs  mod.rs  porting.rs
src-tauri/src/category/infrastructure/: mod.rs  repo-mapper.rs
src-tauri/src/category/repository/: mod.rs  query-repository.rs  repository.rs
src-tauri/src/common/: mod.rs
src-tauri/src/common/application/: command.rs  mod.rs  query.rs  serializer.rs
src-tauri/src/common/domain/: error.rs  id.rs  mod.rs  porting.rs  query.rs
src-tauri/src/common/infrastructure/: def.rs  mod.rs
src-tauri/src/common/repository/: base.rs  common.rs  mod.rs  predef.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/cfgmanager/: dto.rs  mod.rs  tauri_command.rs
src-tauri/src/core/dbmanager/: mod.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/category/application/: service.rs  tauri-command.rs
src-tauri/src/modules/category/domain/: error.rs  factory.rs  id.rs  mod.rs  plainobj.rs  porting.rs
src-tauri/src/modules/category/infrastructure/: domapper.rs  mod.rs  portmapper.rs  querybuilder.rs  repo-mapper.rs
src-tauri/src/modules/category/repository/: mod.rs  query-repository.rs  repository.rs
src-tauri/src/modules/common/application/: query.rs
src-tauri/src/modules/common/domain/: aggregate.rs  error.rs  id.rs  mapper.rs  mod.rs
src-tauri/src/modules/common/infrastructure/: mod.rs  orderby.rs  querybuilder.rs  repomapper.rs  utils.rs
src-tauri/src/modules/common/repository/: base.rs  common.rs  mod.rs  obj.rs  predef.rs
src-tauri/src/modules/resource/application/: service.rs  tauri-command.rs
src-tauri/src/modules/resource/domain/: id.rs  (+5 more)
src-tauri/src/resource/application/: mod.rs  service.rs  tauri-command.rs
src-tauri/src/resource/domain/: error.rs  id.rs  mod.rs  porting.rs
src-tauri/src/resource/infrastructure/: mod.rs  query-builder.rs  repo-mapper.rs  stringql.rs  stringqlobj.rs
src-tauri/src/resource/repository/: mod.rs  query-repository.rs  relation-repository.rs  repository.rs
src-tauri/src/subject/application/: mod.rs  service.rs  tauri-command.rs
src-tauri/src/subject/domain/: error.rs  id.rs  mod.rs
src-tauri/src/subject/infrastructure/: mod.rs  query-builder.rs  repo-mapper.rs
src-tauri/src/subject/repository/: mod.rs  query-repository.rs  repository.rs
src-tauri/src/tag/application/: service.rs  tauri-command.rs
src-tauri/src/tag/domain/: error.rs  id.rs  mod.rs  porting.rs
src-tauri/src/tag/infrastructure/: mod.rs  query-builder.rs  repo-mapper.rs
src-tauri/src/tag/repository/: mod.rs  query-repository.rs  repository.rs
src-tauri/src/utils/: string.rs
(+423 files in other folders)
