[package]
name = "maku"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "protocol-asset", "path-all", "fs-all", "shell-open", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.4.0"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
surrealdb = "1.0.2"
chrono = "0.4.31"
async-trait = "0.1.72"
thiserror = "1.0.44"
once_cell = "1.19.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
