[package]
name = "maku"
version = "0.0.0"
description = "Tagging System"
authors = ["Bill2015"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dev-dependencies]
test-case = "3.3.1"
pretty_assertions = "1.4.0"
cargo-nextest = "0.9.67"
cargo-tarpaulin = "0.27.3"

[dependencies]
tauri = { version = "1.5.4", features = [ "clipboard-all", "dialog-all", "process-command-api", "protocol-asset", "path-all", "fs-all", "shell-open", "devtools"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
uuid = "1.7.0"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
surrealdb = "1.1.1"
chrono = "0.4.31"
async-trait = "0.1.77"
thiserror = "1.0.56"
once_cell = "1.19.0"
url = "2.4.1"
anyhow = "1.0.79"
base64 = "0.21.7"
pretty_env_logger = "0.5.0"
log = "0.4.20"
regex = "1.10.3"
paste = "1.0.14"
strum_macros = "0.26.1"
strum = "0.26.1"
file-format = { version = "0.24.0", features = [ "reader" ] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
